# UrFU-Diploma-Drone-Detection-Server

./: pyproject.toml  show_file.py  start.sh  systemctl.conf  test.py
.ci/: Dockerfile
docker/: docker-compose.yml
src/: main.py
src/app/: __init__.py  app.py  init.py
src/app/telegram/: echo.py
src/entity/: drone_box.py  drone_model.py  statistics.py
src/features/analyzer/: __init__.py  services.py
src/features/classification/: __init__.py  di.py  services.py
src/features/detection/: __init__.py  di.py  services.py
src/features/download_video/: services.py
src/features/get_drone_info/: __init__.py  service.py
src/features/load_report/: services.py
src/features/load_video/: __init__.py  di.py  service.py
src/features/update_user_location/: services.py
src/shared/api/: mongo_db.py
src/shared/api/yandex/map/: __init__.py  client.py
src/shared/configs/: __init__.py  _settings.py  logger_config.py
src/shared/libs/s3/: __init__.py  client.py
src/shared/typing/: __init__.py
